# creator-tools

./: .gitignore  .graphqlconfig  .prettierrc  README.md  build.sh  houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calculate_usage.rs  create_ttmp.rs  deduplicate.rs  delta.rs  main.rs  multi_writer.rs  state.rs
src-tauri/src/converters/: mod.rs  xma.rs
src/lib/: client.ts  coverImage.svelte  stores.ts  util.ts
src/lib/graphql/: GetFiles.gql  GetMe.gql  GetMod.gql  LogIn.gql
src/routes/: +layout.svelte  +page.svelte
src/routes/delta/: +page.svelte
src/routes/download/: +page.svelte
src/routes/login/: +page.svelte
src/routes/repack/: +page.svelte
src/routes/usage/: +page.svelte
static/: pico.custom.css
