[package]
name = "heliosphere-creator-tools"
version = "1.1.0"
authors = ["Anna Clemens <git@annaclemens.io>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
hex = "0.4"
lazy_static = "1"
maplit = "1"
num_cpus = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
tauri = { version = "1.2", features = ["devtools", "dialog-open", "dialog-save", "http-request"] }
tauri-plugin-window-state = "0.1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
ttmp = { git = "https://git.anna.lgbt/ascclemens/ttmp-rs" }
url = { version = "2", features = ["serde"] }
zip = "0.6"
zstd = "0.12"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
